--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "react-router-dom": "^7.3.0",
+    "sass-embedded": "^1.86.0",
     "vite": "^6.2.0"
   }
 }
